# monitor_service

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  reset_and_backfill.py
sql/: 01_create_tables.sql
src/: __init__.py  config.py  monitor.py  n8n_client.py  parser.py  supabase_writer.py
